--- a/public/index.html
+++ b/public/index.html
@@ -381,7 +381,7 @@
     // 현재는 박건도의 컴퓨터를 이용해서 서버를 구동하지만, 프로젝트가 타인에게 넘어갈 경우 위 링크를 참고하여 새로운 ip에서 서버를 실행시켜야함.
 
     // data는 각 서버에 담을 공동적인 데이터들임.
-    let socket = io("http://localhost:8080/");
+    let socket = io("http://metaversanalysis3:8080");
     // let socket = io("http://211.248.120.68:9876/");
     let data = {
       id: null,
