--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <!-- 화면 아랫쪽 파란색 버튼 => 측정 시작을 누르면 현재 캐릭터의 위치측정을 시작한다. 측정끝을 누르면 캐릭터가 걸어온 루트를 빨간색 도형과 선으로 시각화한다. -->
       <div class="btnUI">
-        <!-- <button class="start">측정시작</button>
-        <button class="end">측정끝</button> -->
+        <button class="start">측정시작</button>
+        <button class="end">측정끝</button>
 
       <!-- 화면 아랫쪽 빨간색 버튼 => 측정 시작을 누르면 전체 캐릭터의 위치측정을 시작한다. 측정끝을 누르면 캐릭터가 걸어온 루트를 모두 파이어 베이스 서버에 올려놓는다. -->
       <!-- 파이어베이스 주소 https://console.firebase.google.com/project/metaverseanalysis-2ef87/firestore/data/~2Fpost~2FTest?hl=ko -->
